--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
     name: 'BUAA Econ Wiki',
 
     coverpage: true,   // 保留你的封面
-    onlyCover: true,  // ❗允许进入正文（关键）
+    onlyCover: false,  // ❗允许进入正文（关键）
 
     loadSidebar: false,
     relativePath: true, // ❗修复 GitHub Pages 子路径最关键配置
