--- a/index.html
+++ b/index.html
@@ -330,6 +330,7 @@
     subMaxLevel: 2,
   };
 </script>
-<script src="https://cdn.jsdelivr.net/npm/docsify@4/lib/docsify.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/docsify@4/lib/docsify.min.js">
+</script>
 </body>
 </html>
